Hopefully fixed an error with horizontal scrolling on certain devices.

--- a/shared/styles.css
+++ b/shared/styles.css
@@ -30,6 +30,7 @@ body {
 	margin: 0px;
 	width: 100%;
 	min-width: 274px;
+	overflow-x: hidden;
 }
 
 a {
